# meshmagick

./: .travis.yml  CMakeLists.txt  README  README.md  azure-pipelines.yml  meshmagick.pc.cmake
include/: MeshMagickPrerequisites.h  MmOgreEnvironment.h  MmOptimiseTool.h  MmOptionsParser.h  MmTool.h  MmToolUtils.h
src/: MmInfoTool.cpp  MmOgreEnvironment.cpp  MmOptimiseTool.cpp  MmToolsUtils.cpp  MmTransformTool.cpp
